--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^5.2.0",
     "normalize-css": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
